add orchestration setup admin api
